# fastapi-starter-kit

./: .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
app/core/: config.py  logging.py  server.py
app/core/errors/: __init__.py  api_exception.py  base.py  exception_handlers.py  responses.py
app/core/schema/: __init__.py  base.py  error.py
